--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,12 +5,12 @@ on:
     branches: [main]
   workflow_dispatch:
 
-permissions: 
+permissions:
   contents: read
   pages: write
   id-token: write
 
-concurrency: 
+concurrency:
   group: pages
   cancel-in-progress: false
 
@@ -39,8 +39,9 @@ jobs:
         run: |
           pnpm run docs:build
           touch .nojekyll
-          ls -l .vitePress/dist
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          path: .vitePress/dist
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: .vitepress/dist
+          dotfiles: true
